2012-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Support 4K-sector NTFS.

	* include/grub/ntfs.h (GRUB_NTFS_MAX_MFT): Increase to 8.
	(grub_ntfs_data): Remove blocksize.
	* grub-core/fs/ntfs.c (fixup): Fix size comparison.
	Remove data argument. All users updated.

2012-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/arc/init.c (grub_total_modules_size): Mark as
	being in .text to avoid dprel references.
	* include/grub/mips/loongson/kernel.h (grub_arch_machine): Likewise.
	* include/grub/mips/loongson/memory.h (grub_arch_memsize): Likewise.
	(grub_arch_highmemsize): Likewise.
	* include/grub/mips/loongson/time.h (grub_arch_busclock): Likewise.
	* include/grub/mips/qemu_mips/memory.h (grub_arch_memsize): Likewise.
	* include/grub/mips/time.h (grub_arch_cpuclock): Likewise.

2012-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Support powerpc with GCC that defines __PPC__ but not __powerpc__.

	* config.h.in (__powerpc__) [__PPC__ && !__powerpc__]: New definition.
	* grub-core/lib/setjmp.S: Treat __PPC__ as equivalent to __powerpc__.

2012-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/datetime.h (grub_get_datetime_cmos): Don't define in
	GRUB_UTIL.
	(grub_set_datetime_cmos): Likewise.

2012-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Make XZ compression parameters dependent on target and not host CPU.

	* configure.ac: Define GRUB_TARGET_CPU_XYZ series.
	* grub-core/lib/xzembed/xz_config.h: Use GRUB_TARGET_CPU_XYZ.

2012-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/powerpc/dl.c (grub_arch_dl_get_tramp_got_size): Remove
	set but not used variable.

2012-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/reiserfs.c (grub_reiserfs_uuid): Reject 0-uuid as
	created when no uuid support is compiled into mkfs.reiser.

2012-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfs.c (macroman_to_utf8): Convert / to :.
	(utf8_to_macroman): Do the opposite.